objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Account Alteration ARG</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Alteração cadastro clientes</fullName>
        <description>Solicitação de alteração de cadastro de clientes.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Em análise - Crédito e cobrança</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Alteração rota de promotor</fullName>
        <description>Solicitação de alteração de rota de promotores.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em andamento</fullName>
        </values>
        <values>
            <fullName>Em espera</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cliente inadimplente</fullName>
        <description>Cliente inadimplente</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Em andamento</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato</fullName>
        <description>Solicitações referentes a contratos.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato - Data de Vigencia Real</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em aprovação</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato - aprovação proposta</fullName>
        <description>Solicitações de aprovações de propostas de contratos.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato - assinatura do cliente</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato - conferência de documentação</fullName>
        <description>Coordenador analisa se documentação encaminhada pelo cliente está correta.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contrato - solicitação de cancelamento</fullName>
        <description>Solicitações aprovação de cancelamento de contratos.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>EUR NIM Service Cloud Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Further information from customer needed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Missed min Qty</fullName>
        </values>
        <values>
            <fullName>New Customer</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Stock issue</fullName>
        </values>
        <values>
            <fullName>Waiting for approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inadimplência justificada</fullName>
        <description>Inadimplência justificada manualmente pelo executivo de vendas.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Em andamento</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Inadimplência justificada</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LAT_MX Account Alteration</fullName>
        <description>Support Process for Account Alteration for Mexico</description>
        <isActive>true</isActive>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Novo cadastro cliente</fullName>
        <description>Ações de conferência de novo cadastro de cliente</description>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Overdue Account AR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Overdue Justification AR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em análise - Crédito e cobrança</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Inadimplência justificada</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Overdue to attorneys AR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em aprovação - Comercial</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Payment Proposal AR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em aprovação - Comercial</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Proposta de pagamento</fullName>
        <description>Proposta de pagamento de títulos de cobrança</description>
        <isActive>true</isActive>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Prorrogação de proposta</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sem proposta de pagamento</fullName>
        <description>Processo para cliente que não sugeriu proposta de pagamento</description>
        <isActive>true</isActive>
        <values>
            <fullName>Em análise - Crédito e cobrança</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Encerrado via Cartório</fullName>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Solicitações e reclamações</fullName>
        <description>Solicitações e reclamações de clientes/prospects</description>
        <isActive>true</isActive>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em andamento</fullName>
        </values>
        <values>
            <fullName>Em aprovação</fullName>
        </values>
        <values>
            <fullName>Em espera</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Término de contrato</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Análise pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Em processo de não renovação</fullName>
        </values>
        <values>
            <fullName>Em processo de prorrogação</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>WO Paymentm Proposal AR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Aprovado</fullName>
        </values>
        <values>
            <fullName>Fechado e resolvido</fullName>
        </values>
        <values>
            <fullName>Novo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pagamento efetuado</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountOwnerManager_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountOwner_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Proposal__c</fullName>
        <label>Action Proposal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renovação do contrato</fullName>
                </value>
                <value>
                    <fullName>Não renovação</fullName>
                </value>
                <value>
                    <fullName>Prorrogação do contrato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <label>Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Purposes_Action__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Allowance</fullName>
                </value>
                <value>
                    <fullName>Bonificação</fullName>
                </value>
                <value>
                    <fullName>KA Contratos</fullName>
                </value>
                <value>
                    <fullName>Off Trade - A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Direto</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Eventos</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Indireto</fullName>
                </value>
                <value>
                    <fullName>Off Trade - KA</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Tático</fullName>
                </value>
                <value>
                    <fullName>On Trade - Ativação &amp; Materiais POS</fullName>
                </value>
                <value>
                    <fullName>On Trade - Contratos</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos Nacionais</fullName>
                </value>
                <value>
                    <fullName>KA - Verba preço promocionado</fullName>
                </value>
                <value>
                    <fullName>On trade - Verba venda direta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Rejection_Date__c</fullName>
        <label>Approval / Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bairro_Fatura__c</fullName>
        <formula>Account.Revenue_Neighbourhood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bairro Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Begin_Contract_Date__c</fullName>
        <formula>LAT_Contract__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Begin Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Breach_description__c</fullName>
        <label>Breach (description)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CEP_Fatura__c</fullName>
        <formula>Account.Revenue_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CEP Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseOwnerManager_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_Dis_Coordinator__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_Dis_Del_Customer__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_Dis_Director__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_Dis_Manager__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_Dis_Sig_Customer__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_regional_filed__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_over_by_terms__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cidade_Fatura__c</fullName>
        <formula>Account.Revenue_City__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cidade Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clause__c</fullName>
        <label>Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Signatory_2__c</fullName>
        <label>Company Signatory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signatory__c</fullName>
        <label>Company Signatory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signature_Date__c</fullName>
        <label>Company Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Deadline_months__c</fullName>
        <label>Contract Deadline (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Link__c</fullName>
        <formula>&quot;https://cs3.salesforce.com/&quot;&amp; LAT_Contract__r.Id</formula>
        <label>Contract Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <formula>LAT_Contract__r.Numero_do_contrato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counterparts__c</fullName>
        <label>Counterparts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Analysis_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Analysis</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>CRA_CredAnalysis_ARG__c.Account_ARG__r.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CRA_CredAnalysis_ARG__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Analysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo obrigatório quando o motivo da demanda for alteração de limite de crédito.</description>
        <inlineHelpText>Campo obrigatório quando o motivo da demanda for alteração de limite de crédito.</inlineHelpText>
        <label>Credit Analysis</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Analise_de_credito__c.Conta__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>Indique a análise de crédito.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Analise_de_credito__c</referenceTo>
        <relationshipLabel>Demandas de Alteração de limite de crédito</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signatory_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signatory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demandas (Signatário do cliente)</relationshipLabel>
        <relationshipName>Demandas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signatory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demandas</relationshipLabel>
        <relationshipName>Demandas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signature_Date__c</fullName>
        <label>Customer Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Situation__c</fullName>
        <formula>IF ( Account.Overdue__c , IMAGE(&quot;https://c.cs3.content.force.com/servlet/servlet.ImageServer?id=015Q00000001OZk&amp;oid=00DQ0000000EAzg&amp;lastMod=1337614026000&quot;, &quot;Cliente inadimplente&quot;,15,150), &quot;Cliente Adimplente&quot;)</formula>
        <label>Customer Situation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_is_KA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if customer is a Key Account. It will be used for sharing rule &quot;Compartilha cliente filho com KA&quot;in order to share the child accounts with key accounts. It&apos;s invisible for user interface.</description>
        <label>Customer is KA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_Number__c</fullName>
        <label>D.A Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_expiration_of_the_validity__c</fullName>
        <formula>LAT_Contract__r.EndDate__c</formula>
        <label>Date of expiration of the validity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_CustomerNumberERP__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Customer_No_ERP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer-Number (ERP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_DeliveryNoteNumber__c</fullName>
        <formula>EUR_NIM_SalesOrderEU__r.EUR_NIM_DeliveryNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Note Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_DetailedReason__c</fullName>
        <label>Detailed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_NIM_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate delivery order - 9061</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous type error - 921</fullName>
                </value>
                <value>
                    <fullName>Issue in the masterdata - 926</fullName>
                </value>
                <value>
                    <fullName>Type error - 10</fullName>
                </value>
                <value>
                    <fullName>Issue in the masterdata - 11</fullName>
                </value>
                <value>
                    <fullName>Wrong delivery address - 9131</fullName>
                </value>
                <value>
                    <fullName>Delivery reliability - delivery date to short - 9161</fullName>
                </value>
                <value>
                    <fullName>Delivery date - not matching customer - 9141</fullName>
                </value>
                <value>
                    <fullName>Delivery instructions incomplete/no communicated to Fiege - 9251</fullName>
                </value>
                <value>
                    <fullName>Delivery reliability C1 Hold Code - 24</fullName>
                </value>
                <value>
                    <fullName>Provision of customer - 919</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous complaints regarding packaging / pallets - 9051</fullName>
                </value>
                <value>
                    <fullName>Pick-up for free - 51</fullName>
                </value>
                <value>
                    <fullName>Change in delivery date before delivery - 31</fullName>
                </value>
                <value>
                    <fullName>Cancellation before delivery - 33</fullName>
                </value>
                <value>
                    <fullName>Delivery reliability - No information regarding notification or time slot - 925</fullName>
                </value>
                <value>
                    <fullName>Delivery reliability - No information regarding acceptance of delivery - 912</fullName>
                </value>
                <value>
                    <fullName>Delivery reliability - Recipient not met  - 910</fullName>
                    <label>Delivery reliability - Recipient not met - 910</label>
                </value>
                <value>
                    <fullName>No delivery - Delivery only with lifting ramp - This was not known - 915</fullName>
                </value>
                <value>
                    <fullName>Waiting time too long - 911</fullName>
                </value>
                <value>
                    <fullName>No delivery - Rejected order - 913</fullName>
                </value>
                <value>
                    <fullName>Delivery reliability - no time slot available - 9311</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s warehouse overcharged - 9221</fullName>
                </value>
                <value>
                    <fullName>Rejected order - Customer&apos;s warehouse overcharged - 9222</fullName>
                </value>
                <value>
                    <fullName>Rejected order - Mistake in the order - 40</fullName>
                </value>
                <value>
                    <fullName>Pick-up of order - Mistake in the order - 50</fullName>
                </value>
                <value>
                    <fullName>Cancellation - 71</fullName>
                </value>
                <value>
                    <fullName>Change in the delivery instructure afterwards - 70</fullName>
                </value>
                <value>
                    <fullName>Picking mistake - 9110</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous quality issues - 927</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_NIM_JDENumber__c</fullName>
        <formula>EUR_NIM_SalesOrderEU__r.EUR_CRM_Order_Nr_JDE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDE Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_JDEOrderLink__c</fullName>
        <formula>EUR_NIM_SalesOrderEU__r.EUR_NIM_ERPOrderURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDE Order Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-acceptance of goods (Mistake PRD)</fullName>
                </value>
                <value>
                    <fullName>Pick-up order at the customer&apos;s (Mistake PRD)</fullName>
                </value>
                <value>
                    <fullName>Delayed delivery (Mistake PRD)</fullName>
                </value>
                <value>
                    <fullName>Internal PRD</fullName>
                </value>
                <value>
                    <fullName>Without impact on customer</fullName>
                </value>
                <value>
                    <fullName>Pickup / Rejected order / Wrong instructions</fullName>
                </value>
                <value>
                    <fullName>Change in the delivery note afterwards</fullName>
                </value>
                <value>
                    <fullName>Non-acceptance of goods (Mistake 3PL)</fullName>
                </value>
                <value>
                    <fullName>Pick-up order at the customer&apos;s (Mistake 3PL)</fullName>
                </value>
                <value>
                    <fullName>Other complaints</fullName>
                </value>
                <value>
                    <fullName>Delayed delivery (Mistake 3PL)</fullName>
                </value>
                <value>
                    <fullName>Major risk</fullName>
                </value>
                <value>
                    <fullName>ETA</fullName>
                </value>
                <value>
                    <fullName>Short Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivery Failure</fullName>
                </value>
                <value>
                    <fullName>Non Delivery</fullName>
                </value>
                <value>
                    <fullName>Breakages</fullName>
                </value>
                <value>
                    <fullName>BackOrder</fullName>
                </value>
                <value>
                    <fullName>Out of Stock</fullName>
                </value>
                <value>
                    <fullName>Incorrect Product Telesales</fullName>
                </value>
                <value>
                    <fullName>Incorrect Product Sales</fullName>
                </value>
                <value>
                    <fullName>Incorrect Product Pick</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Rollup</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Chargeout</fullName>
                </value>
                <value>
                    <fullName>CC Error</fullName>
                </value>
                <value>
                    <fullName>Rep Error</fullName>
                </value>
                <value>
                    <fullName>Customer Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>